Overflow problem solved

--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,9 @@ body {
   color: white;
   padding: 0;
   margin: 0;
+}
+
+.App {
   overflow-x: hidden;
 }
 
